--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
         <button onclick="generateQR()">Generate QR Code</button>
     </div>
+    
     <script>
         let imgBox = document.getElementById("imgBox");
         let qrImage = document.getElementById("qrImage");
@@ -32,8 +33,12 @@
                     qrText.classList.remove('error');
                 },750);
             }
-            
         }
+
+        qrText.addEventListener("touchstart", function (e) {
+            e.preventDefault(); // 터치로 인한 포커스 방지
+        });
+
     </script>
 </body>
 </html>
